--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,6 @@ body {
     text-decoration: none;
    
 }
-
 .btn-green-dark:hover {
     background-color: transparent;
     color: var(--liqtrade-green-dark);
@@ -133,20 +132,19 @@ body {
     font-weight: 700; 
     color: #1a202c; 
     line-height: 1.2; 
-    margin-top:15%; 
+    margin-top:-5%; 
 }
 
 .hero-description {
     color: #4a5568; 
     font-size: 1.125rem; 
-    margin-top:-15%;  
+    margin-top:10%;  
 }
 
 .hero-buttons-wrapper {
     display: flex;
-    justify-content: center;
-    gap: 1rem; /* space-x-4 */
-     margin-top:15%; 
+    gap: 1rem; 
+    margin-top:15%; 
 }
 
 .hero-image-wrapper {
@@ -195,7 +193,6 @@ body {
     background-color: var(--liqtrade-gray);
     padding: 10px;
 }
-
 .gray-content-wrapper {
     display: flex;
     flex-direction: column; 
