--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,12 @@ body {
     text-decoration: underline;
     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 }
-
+.btn-green-light-inscrire {
+    padding: 0.75rem 1.5rem; 
+    border-radius: 0.375rem; 
+    background-color: #fff;
+    border: 1px solid var(--liqtrade-green-dark);
+}
 .btn-green-light:hover {
     background-color: var(--liqtrade-green-dark);
     color: #fff;
